fixed bug on mobile view

--- a/src/components/css/aboutme.css
+++ b/src/components/css/aboutme.css
@@ -104,7 +104,6 @@
     font-size: 10px;
   }
   .inner {
-    flex-wrap: wrap;
     flex-direction: column;
   }
   .two {
